--- a/src/styles/_override.scss
+++ b/src/styles/_override.scss
@@ -31,11 +31,12 @@ opacity: 0.9;
 }
 
 share-widget div {
-width: 30px;
-height: 30px;
+width: 44px;
+height: 44px;
 background-image: url("../img/share.svg");
 background-repeat: no-repeat;
 background-position: center;
+background-size: 30px 30px;
 }
 
 .apple share-widget div {
@@ -57,10 +58,19 @@ opacity: 0.9;
 }
 
 img[align="left"] {
+float: none;
 width: auto;
-height: 16rem;
-margin-right: 1rem;
-margin-bottom: 1rem;
+height: auto;
+max-height: 16rem;
+
+@include for-tablet-up {
+  float: left;
+  height: 16rem;
+  width: auto;
+  max-height: none;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
 }
 
 dl {
