--- a/src/styles/_pre.scss
+++ b/src/styles/_pre.scss
@@ -36,7 +36,7 @@ code {
 	font-family: $monospace;
 	font-size: 90%;
 	padding: bs(.2) bs(.4);
-	white-space: nowrap;
+	white-space: normal;
   }
 
 pre code {
