--- a/src/styles/_resume.scss
+++ b/src/styles/_resume.scss
@@ -62,7 +62,7 @@
   .btn-print,
   .btn-download {
     display: inline-block;
-    padding: 0.4em 1em;
+    padding: 0.75em 1.25em;
     border-radius: 4px;
     font-family: $serif;
     font-size: 0.9em;
